<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="decrement">-</string>
    <string name="default_quantity">1</string>
    <string name="order">ORDER</string>
    <string name="my_name">Name :</string>
    <string name="add_whipped_cream">Add Whipped Cream ?</string>
    <string name="add_chocolate">Add Chocolate ?</string>
    <string name="total_price">Total :</string>
    <string name="thank_you">Thank You!</string>
</resources>
